feat: 프로젝트 생성 및 로그 오류 수정